# api-monitor

./: .env.example  MIGRATION.md  README.md  docker-compose.yml
app/: Dockerfile  Dockerfile.new  config_generator.py  dashboard_generator.py  discovery.py  main.py  main_bu.py  pyproject.toml  token_exporter.py
app/api/routes/: __init__.py  device.py  health.py
app/core/: config.py  device_config.py  errors.py  tasks.py
app/services/: device_service.py
app/templates/: dashboard_generic.json.j2  telegraf_generic.conf.j2
config/: devices.yml
config/grafana/: grafana.ini
config/grafana/provisioning/dashboards/: checkmate.json  prismon-monitor.json
config/prometheus/: prometheus.yml
config/telegraf/: checkmate.conf  prismon-monitor.conf  telegraf.conf  token_store.json
